--- a/app/views/AppealConfirmationPage.scala.html
+++ b/app/views/AppealConfirmationPage.scala.html
@@ -56,10 +56,10 @@
 
     <ul class="govuk-list">
         <li>
-            <a class="govuk-link" href="@{appConfig.penaltiesFrontendUrl}" id="penalties-link">@getMessage("appealConfirmation.returnToPenalties")</a>
+            <a class="govuk-link" href="@{appConfig.penaltiesFrontendUrl}" id="penalties-link">@getMessage("appealConfirmation.returnToPenalties", false)</a>
         </li>
         <li>
-            <a class="govuk-link" href="@{appConfig.vatOverviewUrl}" id="view-vat-account-link">@getMessage("appealConfirmation.returnToVatVc")</a>
+            <a class="govuk-link" href="@{appConfig.vatOverviewUrl}" id="view-vat-account-link">@getMessage("appealConfirmation.returnToVatVc", false)</a>
         </li>
     </ul>
 
