--- a/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/health/WhenDidHealthReasonHappenPage.scala.html
@@ -7,13 +7,13 @@
         govukButton: GovukButton,
         dateInput: components.inputDate)
 
-@(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig, user: UserRequest[_])
 
 @lppOrLspDynamicText = @{
     if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) "healthReason.whenHealthIssueHappened.lpp.hintText" else "healthReason.whenHealthIssueHappened.hintText"
 }
 
-@layout(pageTitle = messages("healthReason.whenHealthIssueHappened.title"),
+@layout(pageTitle = getMessage("healthReason.whenHealthIssueHappened.title"),
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors) {
@@ -21,9 +21,9 @@
 
         @dateInput(
             form = form,
-            legendContent = messages("healthReason.whenHealthIssueHappened.heading"),
+            legendContent = getMessage("healthReason.whenHealthIssueHappened.heading"),
             legendClasses = Some("govuk-fieldset__legend govuk-fieldset__legend--l"),
-            hintText = Some(messages(lppOrLspDynamicText)),
+            hintText = Some(getMessage(lppOrLspDynamicText)),
             legendAsPageHeading = true
         )
 
