[PRM-440] - Added isLPP as part of call to backend

--- a/app/views/HonestyDeclarationPage.scala.html
+++ b/app/views/HonestyDeclarationPage.scala.html
@@ -35,7 +35,7 @@
     <ul class="govuk-list govuk-list--bullet">
         <li>
         @if(!reasonText.equals("")){
-            @messages("honestyDeclaration.li.1.1", reasonText)&nbsp
+            @messages("honestyDeclaration.li.1.1", reasonText)
         }
 
         @if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) {
