--- a/app/views/HonestyDeclarationPage.scala.html
+++ b/app/views/HonestyDeclarationPage.scala.html
@@ -61,7 +61,7 @@
         @if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) {
             @messages("honestyDeclaration.lpp.li.2")
         } else {
-            @getMessage("honestyDeclaration.li.2", false)
+            @getMessage("honestyDeclaration.li.2")
         }
         </li>
         <li>
