[PRM-455] - Added appeal against obligation pvariation on file upload page

--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -9,8 +9,15 @@
 
 @(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@lppOrLspDynamicText = @{
-    if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) "otherReason.uploadEvidence.lpp.p2" else "otherReason.uploadEvidence.p2"
+@lppOrLspOrObligationDynamicText = @{
+    if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString) && request.session.get(SessionKeys.isObligationAppeal).isDefined) {
+        //TODO: change to LPP appeal against obligation
+        ""
+    } else if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) {
+        "otherReason.uploadEvidence.lpp.p2"
+    } else if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Submission.toString) && request.session.get(SessionKeys.isObligationAppeal).isDefined) {
+        "otherReason.uploadEvidence.appealAgainstObligation.p2"
+    } else "otherReason.uploadEvidence.p2"
 }
 
 @layout(pageTitle = messages("otherReason.uploadEvidence.title"),
@@ -19,7 +26,7 @@
     formErrors = form.errors) {
     <h1 class="govuk-heading-l">@messages("otherReason.uploadEvidence.heading")</h1>
     <p class="govuk-body">@messages("otherReason.uploadEvidence.p1")</p>
-    <p class="govuk-body">@messages(lppOrLspDynamicText)</p>
+    <p class="govuk-body">@messages(lppOrLspOrObligationDynamicText)</p>
     <p class="govuk-body">@messages("otherReason.uploadEvidence.p3")</p>
 
     @formHelper(action = postAction) {
