--- a/app/views/CancelVATRegistrationPage.scala.html
+++ b/app/views/CancelVATRegistrationPage.scala.html
@@ -23,16 +23,17 @@ radios: components.radios)
 @(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = messages("cancelVATRegistration.title"),
-isPageFullWidth = false) {
-@formHelper(action = postAction) {
-
-@radios(
-form = form,
-legend = messages("cancelVATRegistration.heading"),
-hint = Some(Html(messages("cancelVATRegistration.hintText"))),
-items = radioOptions,
-legendAsHeading = true
-)
-@govukButton(Button(content = Text(messages("common.continue"))))
-}
+    isPageFullWidth = false,
+    formHasErrors = form.errors.nonEmpty,
+    formErrors = form.errors) {
+    @formHelper(action = postAction) {
+        @radios(
+            form = form,
+            legend = messages("cancelVATRegistration.heading"),
+            hint = Some(Html(messages("cancelVATRegistration.hintText"))),
+            items = radioOptions,
+            legendAsHeading = true
+        )
+    @govukButton(Button(content = Text(messages("common.continue"))))
+    }
 }
