--- a/app/views/HonestyDeclarationPage.scala.html
+++ b/app/views/HonestyDeclarationPage.scala.html
@@ -23,7 +23,7 @@
         formHelper: FormWithCSRF)
 
 
-@(form: Form[_], reasonText: String, friendlyDate: String, extraBullets: Seq[String])(implicit request: Request[_], messages: Messages, appConfig: AppConfig, user: UserRequest[_])
+@(form: Form[_], reasonText: String, friendlyDueDate: String, friendlyStartDate: String, friendlyEndDate: String, extraBullets: Seq[String], isObligationAppeal: Boolean = false)(implicit request: Request[_], messages: Messages, appConfig: AppConfig, user: UserRequest[_])
 
 @layout(pageTitle = messages("honestyDeclaration.title"),
     isPageFullWidth = false,
@@ -36,19 +36,21 @@
         <li>
         @if(!reasonText.equals("")){
             @messages("honestyDeclaration.li.1.1", reasonText)
+        } else if(isObligationAppeal) {
+            @messages("honestyDeclaration.obligation.li.1")
         }
 
         @if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) {
-            @messages("honestyDeclaration.lpp.li.1.2", friendlyDate)
-        } else {
+            @messages("honestyDeclaration.lpp.li.1.2", friendlyDueDate)
+        } else if(!isObligationAppeal) {
             @if(user.isAgent && didClientCauseLateSubmission){
                 @if(reasonText.contains("crime") || reasonText.contains("death")){
-                    @getMessage("honestyDeclaration.li.1.2", friendlyDate)
+                    @getMessage("honestyDeclaration.li.1.2", friendlyDueDate)
                 }else{
-                    @getMessage("honestyDeclaration.li.1.2.myClient", friendlyDate)
+                    @getMessage("honestyDeclaration.li.1.2.myClient", friendlyDueDate)
                 }
             }else{
-                @messages("honestyDeclaration.li.1.2", friendlyDate)
+                @messages("honestyDeclaration.li.1.2", friendlyDueDate)
             }
         }
         </li>
@@ -60,6 +62,8 @@
         <li>
         @if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) {
             @messages("honestyDeclaration.lpp.li.2")
+        } else if(isObligationAppeal) {
+            @messages("honestyDeclaration.obligation.li.2", friendlyStartDate, friendlyEndDate)
         } else {
             @getMessage("honestyDeclaration.li.2")
         }
