removed email/secure message on sumbission page for agent appeal journey

--- a/app/views/AppealConfirmationPage.scala.html
+++ b/app/views/AppealConfirmationPage.scala.html
@@ -52,7 +52,9 @@
 
     <p class="govuk-body">@messages("appealConfirmation.p3")</p>
 
-    <p class="govuk-body">@messages("appealConfirmation.p4")</p>
+    @if(!user.isAgent){
+        <p class="govuk-body">@messages("appealConfirmation.p4")</p>
+    }
 
     <ul class="govuk-list">
         <li>
