--- a/app/views/HonestyDeclarationPage.scala.html
+++ b/app/views/HonestyDeclarationPage.scala.html
@@ -1,19 +1,18 @@
 @*
- * Copyright 2021 HM Revenue & Customs
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- *@
-
+* Copyright 2021 HM Revenue & Customs
+*
+* Licensed under the Apache License, Version 2.0 (the "License");
+* you may not use this file except in compliance with the License.
+* You may obtain a copy of the License at
+*
+* http://www.apache.org/licenses/LICENSE-2.0
+*
+* Unless required by applicable law or agreed to in writing, software
+* distributed under the License is distributed on an "AS IS" BASIS,
+* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+* See the License for the specific language governing permissions and
+* limitations under the License.
+*@
 @import config.AppConfig
 @import utils.SessionKeys
 
@@ -25,64 +24,66 @@
 
 @(form: Form[_], reasonText: String, friendlyDueDate: String, friendlyStartDate: String, friendlyEndDate: String, extraBullets: Seq[String], isObligationAppeal: Boolean = false)(implicit request: Request[_], messages: Messages, appConfig: AppConfig, user: UserRequest[_])
 
-@layout(pageTitle = messages("honestyDeclaration.title"),
-    isPageFullWidth = false,
-    formHasErrors = form.errors.nonEmpty,
-    formErrors = form.errors) {
+    @layout(pageTitle = messages("honestyDeclaration.title"),
+        isPageFullWidth = false,
+        formHasErrors = form.errors.nonEmpty,
+        formErrors = form.errors) {
 
-    <h1 class="govuk-heading-l">@messages("honestyDeclaration.heading")</h1>
-    <p class="govuk-body">@messages("honestyDeclaration.p1")</p>
-    <ul class="govuk-list govuk-list--bullet">
-        <li>
-        @if(!reasonText.equals("") && !isObligationAppeal){
-            @messages("honestyDeclaration.li.1.1", reasonText)
-        } else if(isObligationAppeal) {
-            @messages("honestyDeclaration.obligation.li.1")
-        }
-
-        @if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString) && !isObligationAppeal) {
-            @messages("honestyDeclaration.lpp.li.1.2", friendlyDueDate)
-        } else if(!isObligationAppeal) {
-            @if(user.isAgent && didClientCauseLateSubmission){
-                @if(reasonText.contains("crime") || reasonText.contains("death")){
-                    @getMessage("honestyDeclaration.li.1.2", friendlyDueDate)
-                }else{
-                    @getMessage("honestyDeclaration.li.1.2.myClient", friendlyDueDate)
+        <h1 class="govuk-heading-l">@messages("honestyDeclaration.heading")</h1>
+        <p class="govuk-body">@messages("honestyDeclaration.p1")</p>
+        <ul class="govuk-list govuk-list--bullet">
+            <li>
+                @if(!reasonText.equals("") && !isObligationAppeal) {
+                    @messages("honestyDeclaration.li.1.1", reasonText)
+                } else if(isObligationAppeal) {
+                @messages("honestyDeclaration.obligation.li.1")
                 }
-            }else{
-                @messages("honestyDeclaration.li.1.2", friendlyDueDate)
+
+                @if(!isObligationAppeal) {
+                    @if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) {
+                        @messages("honestyDeclaration.lpp.li.1.2", friendlyDueDate)
+                    } else {
+                        @if(user.isAgent && didClientCauseLateSubmission) {
+                            @if(reasonText.contains("crime") || reasonText.contains("death")) {
+                                @getMessage("honestyDeclaration.li.1.2", friendlyDueDate)
+                            } else {
+                                @getMessage("honestyDeclaration.li.1.2.myClient", friendlyDueDate)
+                            }
+                        } else {
+                            @messages("honestyDeclaration.li.1.2", friendlyDueDate)
+                        }
+                    }
+                }
+            </li>
+            @extraBullets.map { bullet =>
+                <li>
+                    @messages(bullet)
+                </li>
             }
-        }
-        </li>
-        @extraBullets.map { bullet =>
             <li>
-                @messages(bullet)
+                @if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) {
+                    @messages("honestyDeclaration.lpp.li.2")
+                } else if(isObligationAppeal) {
+                @messages("honestyDeclaration.obligation.li.2", friendlyStartDate, friendlyEndDate)
+                } else {
+                @getMessage("honestyDeclaration.li.2")
+                }
             </li>
-        }
-        <li>
-        @if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) {
-            @messages("honestyDeclaration.lpp.li.2")
-        } else if(isObligationAppeal) {
-            @messages("honestyDeclaration.obligation.li.2", friendlyStartDate, friendlyEndDate)
-        } else {
-            @getMessage("honestyDeclaration.li.2")
-        }
-        </li>
-        @if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString) && request.session.get(SessionKeys.reasonableExcuse).contains("technicalIssues")) {
-            <li>
+            @if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString) && request.session.get(SessionKeys.reasonableExcuse).contains("technicalIssues")) {
+                <li>
                 @messages("honestyDeclaration.li.extra.technicalIssues")
+                </li>
+            }
+
+            <li>
+            @messages("honestyDeclaration.li.3")
             </li>
+        </ul>
+
+        @formHelper(action = controllers.routes.HonestyDeclarationController.onSubmit()) {
+
+            <input type="hidden" id="declaration" name="value" value="true">
+
+            @govukButton(Button(content = Text(messages("common.acceptAndContinue"))))
         }
-
-        <li>
-        @messages("honestyDeclaration.li.3")
-        </li>
-    </ul>
-
-    @formHelper(action = controllers.routes.HonestyDeclarationController.onSubmit()) {
-
-        <input type="hidden" id="declaration" name="value" value="true">
-
-        @govukButton(Button(content = Text(messages("common.acceptAndContinue"))))
     }
-}
