--- a/app/views/AppealStartPage.scala.html
+++ b/app/views/AppealStartPage.scala.html
@@ -24,6 +24,16 @@
 
 @(isLate: Boolean, isObligationAppeal: Boolean)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
+@nextPageUrl = @{
+    if(isObligationAppeal){
+        routes.HonestyDeclarationController.onPageLoad().url
+    } else if(request.session.get(SessionKeys.agentSessionVrn).isDefined && !request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) {
+        routes.AgentsController.onPageLoadForWhoPlannedToSubmitVATReturn(NormalMode).url
+    } else {
+        routes.ReasonableExcuseController.onPageLoad().url
+    }
+}
+
 @baseBulletPoints = @{
     Seq(
         if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) Html(messages("appealStart.lpp.li.2.1")) else Html(messages("appealStart.li.2.1")),
@@ -64,12 +74,5 @@
         <p class="govuk-body">@messages("appealStart.p6")</p>
     }
 
-    @link(if(request.session.get(SessionKeys.agentSessionVrn).isDefined){
-            routes.AgentsController.onPageLoadForWhoPlannedToSubmitVATReturn(NormalMode).url
-        }else if(request.session.get(SessionKeys.isObligationAppeal).isDefined){
-            routes.HonestyDeclarationController.onPageLoad().url
-        }else{
-            routes.ReasonableExcuseController.onPageLoad().url
-        }
-     ,"common.continue", button = true, classes = "govuk-button")
+    @link(nextPageUrl, "common.continue", button = true, classes = "govuk-button")
 }
