--- a/app/views/reasonableExcuseJourneys/other/WhenDidBecomeUnablePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/WhenDidBecomeUnablePage.scala.html
@@ -9,8 +9,12 @@
 
 @(form: Form[_], postAction: Call)(implicit messages: Messages, appConfig: AppConfig, userRequest: UserRequest[_])
 
+@appealType = @{userRequest.session.get(SessionKeys.appealType)}
+
 @hintText = @{
-    if(userRequest.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) "otherReason.whenDidBecomeUnable.lpp.hintText" else "otherReason.whenDidBecomeUnable.hintText"
+    if(appealType.contains(PenaltyTypeEnum.Late_Payment.toString) || appealType.contains(PenaltyTypeEnum.Additional.toString)) {
+        "otherReason.whenDidBecomeUnable.lpp.hintText"
+    } else "otherReason.whenDidBecomeUnable.hintText"
 }
 
 @layout(pageTitle = getMessage("otherReason.whenDidBecomeUnable.title"),
