--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -9,12 +9,13 @@
 
 @(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
+@appealType = @{request.session.get(SessionKeys.appealType)}
 @lppOrLspOrObligationDynamicText = @{
-    if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString) && request.session.get(SessionKeys.isObligationAppeal).isDefined) {
+    if((appealType.contains(PenaltyTypeEnum.Late_Payment.toString) || appealType.contains(PenaltyTypeEnum.Additional.toString)) && request.session.get(SessionKeys.isObligationAppeal).isDefined) {
         "otherReason.uploadEvidence.appealAgainstObligation.lpp.p2"
-    } else if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)) {
+    } else if(appealType.contains(PenaltyTypeEnum.Late_Payment.toString) || appealType.contains(PenaltyTypeEnum.Additional.toString)) {
         "otherReason.uploadEvidence.lpp.p2"
-    } else if(request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Submission.toString) && request.session.get(SessionKeys.isObligationAppeal).isDefined) {
+    } else if(appealType.contains(PenaltyTypeEnum.Late_Submission.toString) && request.session.get(SessionKeys.isObligationAppeal).isDefined) {
         "otherReason.uploadEvidence.appealAgainstObligation.p2"
     } else "otherReason.uploadEvidence.p2"
 }
