PR comment changes

--- a/app/views/ReasonableExcuseSelectionPage.scala.html
+++ b/app/views/ReasonableExcuseSelectionPage.scala.html
@@ -15,6 +15,7 @@
  *@
 
 @import config.AppConfig
+@import utils.SessionKeys
 
 @this(layout: Layout,
         bullets: components.bullets,
@@ -26,7 +27,9 @@
 
 @(form: Form[_], radioOptions: Seq[RadioItem])(implicit request: UserRequest[_], messages: Messages, appConfig: AppConfig)
 
-@layout(pageTitle = if(request.isAgent){messages("agent.reasonableExcuses.title")}else{messages("reasonableExcuses.title")},
+@layout(pageTitle = if(request.isAgent && !request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)){
+        messages("agent.reasonableExcuses.title")}else{messages("reasonableExcuses.title")
+    },
     isPageFullWidth = false,
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors) {
@@ -34,7 +37,7 @@
 
         @radios(
             form = form,
-            legend = if(request.isAgent){messages("agent.reasonableExcuses.heading")}else{messages("reasonableExcuses.heading")},
+            legend = if(request.isAgent && !request.session.get(SessionKeys.appealType).contains(PenaltyTypeEnum.Late_Payment.toString)){messages("agent.reasonableExcuses.heading")}else{messages("reasonableExcuses.heading")},
             items = radioOptions,
             legendAsHeading = true
         )
