--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -5,11 +5,27 @@
 @this(layout: Layout,
         formHelper: FormWithCSRF,
         govukFileUpload: GovukFileUpload,
-        govukButton: GovukButton)
+        govukButton: GovukButton,
+        details: components.details,
+        p: components.p,
+        bullets: components.bullets)
 
 @(form: Form[_], postAction: Call)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
 @appealType = @{request.session.get(SessionKeys.appealType)}
+@detailsContent = {
+    @p(Html(messages("otherReason.uploadEvidence.details.p1")))
+    @bullets(
+        Seq(
+            Html(messages("otherReason.uploadEvidence.details.li.1")),
+            Html(messages("otherReason.uploadEvidence.details.li.2")),
+            Html(messages("otherReason.uploadEvidence.details.li.3")),
+            Html(messages("otherReason.uploadEvidence.details.li.4")),
+            Html(messages("otherReason.uploadEvidence.details.li.5"))
+        )
+    )
+    @p(Html(messages("otherReason.uploadEvidence.details.p2")))
+}
 @lppOrLspOrObligationDynamicText = @{
     if((appealType.contains(PenaltyTypeEnum.Late_Payment.toString) || appealType.contains(PenaltyTypeEnum.Additional.toString)) && request.session.get(SessionKeys.isObligationAppeal).isDefined) {
         "otherReason.uploadEvidence.appealAgainstObligation.lpp.p2"
@@ -28,15 +44,14 @@
     <p class="govuk-body">@messages("otherReason.uploadEvidence.p1")</p>
     <p class="govuk-body">@messages(lppOrLspOrObligationDynamicText)</p>
     <p class="govuk-body">@messages("otherReason.uploadEvidence.p3")</p>
+    <p class="govuk-body">@messages("otherReason.uploadEvidence.p4")</p>
+    <p class="govuk-body">@messages("otherReason.uploadEvidence.p5")</p>
+    @details("otherReason.uploadEvidence.details.heading", detailsContent)
 
     @formHelper(action = postAction) {
         @govukFileUpload(FileUpload(
             name = "upload-evidence",
-            id = "upload-evidence",
-            label = Label(
-                classes = "govuk-label govuk-label--m",
-                content = Text(messages("otherReason.uploadEvidence.uploadLabel"))
-            )
+            id = "upload-evidence"
         ))
 
         @govukButton(Button(content = Text(messages("common.continue"))))
